--- a/app/views/section/guestbook.html.haml
+++ b/app/views/section/guestbook.html.haml
@@ -1,7 +1,7 @@
 %header
   %h1 Vieraskirja
   
-= paginate @messages
+= paginate @messages, :theme => 'main_site_theme'
   
 - @messages.each do |message|
   %article.entry
@@ -9,4 +9,4 @@
     %time.meta{:datetime => html5_datetime(message.created_at)}= message.created_at
     = auto_link(simple_format(h(message.content)), :link => :urls, :html => { :ref => 'nofollow' }).html_safe
 
-= paginate @messages
+= paginate @messages, :theme => 'main_site_theme'
