--- a/app/views/news/show.html.haml
+++ b/app/views/news/show.html.haml
@@ -1,6 +1,7 @@
-%article
+%article.news
   %header
     %h1= @news
   %div.meta
     %time{:datetime => html5_datetime(@news.created_at), :pubdate => :pubdate}= @news.created_at
   = simple_format(auto_link(h(@news.content)))
+  = render :partial => 'facebook_like'
