--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -118,7 +118,7 @@ nav#global-sub-nav ul li a {
 nav#section-nav {
   float:left;
   width:210px;
-  margin:10px 10px 0 0;
+  margin: 0 10px 10px 0;
   box-shadow: $box-shadow;
   border:1px solid $box-border-color;
   background-color:#ffffff;
@@ -214,6 +214,20 @@ nav.pagination {
 }
 
 /************************************************
+ * Buttons
+ */
+a.orange-button {
+  text-decoration: none;
+  font-weight: bold;
+  background-color: $orange;
+  border-radius: 5px;
+  padding: 5px 9px 5px 9px;
+  color: white;
+  display: inline-block;
+  margin: 4px;
+}
+
+/************************************************
  * Footer
  */
 footer {
@@ -249,19 +263,32 @@ ul#supporter-carousel {
 /************************************************
  * News
  */
-article#news header h1, h2.news {
-  text-transform:uppercase;
+article.news {
+  header h1, h2 {
+    text-transform:uppercase;
+  }
+
+  div.fb-like {
+    margin: 60px 0 10px 0;
+  }
 }
 
-.entry {
-  margin: 20px 0 20px;
+article.entry {
+  margin-top:25px;
+  border-bottom: 2px solid #E1E1E2;
+  padding-bottom:10px;
+  margin: 40px 0 20px;
+}
+
+.read-more {
+  margin: 20px 0 10px 0;
 }
 
 /************************************************
  * Main container
  */
 div#main-container {
-  overflow:auto;
+  overflow: visible;
   // Add some empty space before footer for drop shadows
   padding: 0 10px 10px 10px;
 }
@@ -297,7 +324,9 @@ div#main-container {
  * Main content
  */
 section#main {
-  overflow: hidden;
+  margin-left: 222px;
+  // Overflow must be visible in order to get Facebook Like popup to show correctly
+  overflow: visible;
 }
 
 /************************************************
@@ -311,12 +340,6 @@ section#main {
 time.meta, .meta time { font-style:italic; }
 
 .meta a { color:#999; }
-
-article.entry {
-  margin-top:25px;
-  border-bottom:1px solid #E1E1E2;
-  padding-bottom:10px;
-}
 
 article p {
   margin:10px 0 0 10px;
@@ -401,7 +424,7 @@ tr.even {
 
 /************************************************
  * Team page
- */
+ */             
 div.parallel-col {
   float:left;
   margin-right: 100px;
