--- a/app/views/layouts/_head.html.haml
+++ b/app/views/layouts/_head.html.haml
@@ -6,12 +6,13 @@
 
 %head
   %meta{ :charset => 'UTF-8' }
-  %meta{ :name => "description", :content => "Sähäkkää salibandyä Ilmajoelta" }
+  %meta{ :name => "description", :content => @meta_description }
   %meta{ :name => "keywords", :content => "Ilmajoen, Salibandy, ISB, Ilmajoki" }
-  %meta{ :name => "author", :content => "Ilmajoen Salibandy" }
+  %meta{ :name => "author", :content => "Ilmajoen Salibandy ry" }
+  %meta{ :name => 'og:image', :content => fb_logo_path }
   
   =favicon_link_tag "favicon.ico"
-  %title= "Ilmajoen Salibandy"
+  %title= @meta_title
   = stylesheet_link_tag "application", "http://fonts.googleapis.com/css?family=Molengo"
   = javascript_include_tag "modernizr.custom.js"
   
