--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,6 +3,17 @@
   = render :partial => 'layouts/head'
   
   %body
+    - # Facebook API
+    #fb-root
+    :javascript
+      (function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/fi_FI/all.js#xfbml=1&appId=110869885671470";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));
+
     #container
       = render :partial => 'layouts/header'
       %nav{ :id => 'global-sub-nav'}
