--- a/app/views/team/index.html.haml
+++ b/app/views/team/index.html.haml
@@ -1,22 +1,23 @@
 %header
   %h1= "Joukkue kaudella #{@season}"
 
-.parallel-col
-  %h2 Pelaajat
-  %ul
-    - @players.each do |player|
-      %li= link_to "#{player.number} #{player}", player_path(@section.slug, player)
+.content-wrapper
+  .parallel-col
+    %h2 Pelaajat
+    %ul
+      - @players.each do |player|
+        %li= link_to "#{player.number} #{player}", player_path(@section.slug, player)
 
-.parallel-col
-  - if @coaches.count > 0
-    %h2 Valmentajat
-    %ul
-      - @coaches.each do |coach|
-        %li= link_to coach, player_path(@section.slug, coach)
-        
-.parallel-col
-  - if @assistants.count > 0
-    %h2 Joukkeenjohto
-    %ul
-      - @assistants.each do |assistant|
-        %li= link_to assistant, player_path(@section.slug, assistant)
+  .parallel-col
+    - if @coaches.count > 0
+      %h2 Valmentajat
+      %ul
+        - @coaches.each do |coach|
+          %li= link_to coach, player_path(@section.slug, coach)
+          
+  .parallel-col
+    - if @assistants.count > 0
+      %h2 Joukkeenjohto
+      %ul
+        - @assistants.each do |assistant|
+          %li= link_to assistant, player_path(@section.slug, assistant)
