--- a/app/views/news/show.html.haml
+++ b/app/views/news/show.html.haml
@@ -1,3 +1,6 @@
+- title @news.title
+- description truncate(@news.content, :length => 120, :separator => ' ')
+
 %article.news
   %header
     %h1= @news
