Applied the assets pipeline to admin site.

--- a/app/views/layouts/admin/application.html.haml
+++ b/app/views/layouts/admin/application.html.haml
@@ -15,7 +15,7 @@
     %title= "ISB Hallintasivut - " + controller.controller_name.capitalize
     = csrf_meta_tags
     = javascript_include_tag "modernizr.custom.js"
-    = stylesheet_link_tag "boilerplate", "formtastic.css", "formtastic_changes.css", "admin_style.css", "admin_section_selection"
+    = stylesheet_link_tag "admin_application.css"
   
   %body
     #wrapper
