--- a/app/views/layouts/admin/devise.html.haml
+++ b/app/views/layouts/admin/devise.html.haml
@@ -9,13 +9,13 @@
     %meta{ :charset => 'UTF-8' }
     %meta{ "http-equiv" => "X-UA-Compatible", :content => "IE=edge,chrome=1" }
     %meta{ :name => "description", :content => "" }
-    %meta{ :name => "author", :content => "" }
+    %meta{ :name => "author", :content => "Ilmajoen Salibandy" }
     
-    %link{ :rel => "shortcut icon", :href => "/images/favicon.ico", :type => "image/x-icon"}/
+    = favicon_link_tag "favicon.ico"
     %title= "Ilmajoen salibandy - Hallintasivut"
     = csrf_meta_tag
     = javascript_include_tag "modernizr.custom.js"
-    = stylesheet_link_tag "boilerplate", "devise.css"
+    = stylesheet_link_tag "normalize.css", "devise.css", "formtastic"
   
   %body
     %section.center-wrap
