--- a/app/assets/stylesheets/admin_section_selection.css.scss
+++ b/app/assets/stylesheets/admin_section_selection.css.scss
@@ -8,19 +8,19 @@ div#sections-combo-box {
   padding:4px;
   background-color:#f5f5f5;
   float:right;
-}
 
-div#sections-combo-box div.inner-combo-box {
-   border:1px solid #e1e1e1;
-   background-color:#ffffff;
-   border-radius:2px;
-   padding:5px;
-}
+  div.inner-combo-box {
+    border: 1px solid #e1e1e1;
+    background-color: #ffffff;
+    border-radius: 2px;
+    padding: 5px;
 
-div#sections-combo-box div.inner-combo-box span#selected-section {
-  padding-left:5px;
-  font-weight:bold;
-  letter-spacing:0.14em;
+    span#selected-section {
+      padding-left:5px;
+      font-weight:bold;
+      letter-spacing:0.14em;
+    }
+  }
 }
 
 div#combo-box-container {
@@ -33,37 +33,36 @@ div#combo-box-container {
   border:2px solid #f68d28;
   border-radius:2px;
   float:left;
+
+  ul.combo-box-items {
+    margin:5px 0 10px 5px;
+    padding:0;
+    width:140px;
+    list-style-position:inside;
+    float:left;
+    list-style-image: image-url("link_arrow.gif");
+
+    li {
+      margin:0;
+      padding-left:5px;
+      font:normal normal 1em/1.4em Arial, Helvetica, sans-serif;
+
+      h2 {
+        font:normal bold 1.4em/1.7em Arial, Helvetica, sans-serif;
+        margin:0;
+        padding:0;
+        text-transform:uppercase;
+      }
+
+      a { color:#444444; }
+      a:hover { color:#f68d28; }
+    }
+
+    li:first-child {
+      padding:0;
+      list-style:none;
+    }
+  }
+
+  ul.combo-box-items:nth-child(odd) { clear:both; }
 }
-
-ul.combo-box-items {
-  margin:5px 0 10px 5px;
-  padding:0;
-  width:140px;
-  list-style-position:inside;
-  float:left;
-  list-style-image:url('/images/link_arrow.gif');
-}
-
-ul.combo-box-items:nth-child(odd) { clear:both; }
-
-ul.combo-box-items li {
-  margin:0;
-  padding-left:5px;
-  font:normal normal 1em/1.4em Arial, Helvetica, sans-serif;
-}
-
-ul.combo-box-items li:first-child {
-  padding:0;
-  list-style:none;
-}
-
-ul.combo-box-items li h2 {
-  font:normal bold 1.4em/1.7em Arial, Helvetica, sans-serif;
-  margin:0;
-  padding:0;
-  text-transform:uppercase;
-}
-
-div#combo-box-container ul.combo-box-items li a { color:#444444; }
-
-div#combo-box-container ul.combo-box-items li a:hover { color:#f68d28; }
