Added titles and descriptions to pages.

--- a/app/views/home/show_news.html.haml
+++ b/app/views/home/show_news.html.haml
@@ -1,3 +1,6 @@
+- title @news.title
+- description truncate(@news.content, :length => 120, :separator => ' ')
+
 %article{:id => 'news', :class => 'basic-box' }
   %header
     %h1= @news
