--- a/app/views/section/standings.html.haml
+++ b/app/views/section/standings.html.haml
@@ -1,3 +1,5 @@
+- title "Sarjataulukko - #{@section}"
+
 %header
   - if @partition and @partition.team_standings.size > 0
     %h1= "Sarjataulukko kaudella #{@partition.season}, #{@partition.name.downcase}"
