--- a/app/views/section/matches.html.haml
+++ b/app/views/section/matches.html.haml
@@ -1,3 +1,5 @@
+- title "Ottelut - #{@section}"
+
 %header
   - if @partition and @partition.matches.size > 0
     %h1= "Ottelut kaudella #{@partition.season}, #{@partition}"
