--- a/app/views/section/statistics.html.haml
+++ b/app/views/section/statistics.html.haml
@@ -1,3 +1,5 @@
+- title "Tilastot - #{@section}"
+
 %header
   - if @partition and @partition.statistics.size > 0
     %h1= "Pistepörssi kaudella #{@partition.season}, #{@partition.name.downcase}"
