Don't show municipality if it is blank.

--- a/app/views/team/show.html.haml
+++ b/app/views/team/show.html.haml
@@ -15,7 +15,7 @@
             %strong Syntynyt:
             = @member.birth_year
           
-        - if @member.home_municipality
+        - unless @member.home_municipality.blank?
           %li
             %strong Kotikunta:
             = @member.home_municipality
