Fix views to use the new Formtastic API

--- a/app/views/admin/comments/edit.html.haml
+++ b/app/views/admin/comments/edit.html.haml
@@ -14,5 +14,5 @@
     = form.input :email, :label => 'Sähköposti'
     = form.input :content, :label => 'Viesti'
   
-  = form.buttons do
-    = form.commit_button "Tallenna"
+  = form.actions do
+    = form.action :submit, :label => "Tallenna"
