--- a/app/views/admin/confirmations/show.html.haml
+++ b/app/views/admin/confirmations/show.html.haml
@@ -7,5 +7,5 @@
     = form.input :password, :label => 'Salasana'
     = form.input :password_confirmation, :label => 'Salasana uudestaan'
   
-  = form.buttons do
-    = form.commit_button :label => 'Vahvista'
+  = form.actions do
+    = form.action :submit, :label => 'Vahvista'
