--- a/app/views/admin/link_categories/_form.html.haml
+++ b/app/views/admin/link_categories/_form.html.haml
@@ -2,5 +2,5 @@
   = form.inputs do
     = form.input :name, :label => "Nimi"
 
-  = form.buttons do
-    = form.commit_button :label => 'Tallenna'
+  = form.actions do
+    = form.action :submit, :label => 'Tallenna'
