--- a/app/views/admin/links/_form.html.haml
+++ b/app/views/admin/links/_form.html.haml
@@ -3,5 +3,5 @@
     = form.input :name, :label => "Nimi"
     = form.input :url, :label => "Osoite"
 
-  = form.buttons do
-    = form.commit_button :label => 'Tallenna'
+  = form.actions do
+    = form.action :submit, :label => 'Tallenna'
