--- a/app/views/admin/matches/edit.html.haml
+++ b/app/views/admin/matches/edit.html.haml
@@ -22,5 +22,5 @@
     = form.input :location, :label => 'Sijainti'
     = form.input :report, :label => 'Otteluraportti'    
 
-  = form.buttons do
-    = form.commit_button :label => 'Tallenna'
+  = form.actions do
+    = form.action :submit, :label => 'Tallenna'
