--- a/app/views/admin/matches/new.html.haml
+++ b/app/views/admin/matches/new.html.haml
@@ -16,5 +16,5 @@
       :collection => @partition.team_standings, :include_blank => false
     = form.input :location, :label => 'Sijainti'
 
-  = form.buttons do
-    = form.commit_button :label => 'Tallenna'
+  = form.actions do
+    = form.action :submit, :label => 'Tallenna'
