--- a/app/views/admin/seasons/new.html.haml
+++ b/app/views/admin/seasons/new.html.haml
@@ -14,5 +14,5 @@
     = p.inputs do
       = p.input :name, :label => "Kausiosio"
 
-  = form.buttons do
-    = form.commit_button :label => 'Tallenna'
+  = form.actions do
+    = form.action :submit, :label => 'Tallenna'
