--- a/app/views/admin/sections/_form.html.haml
+++ b/app/views/admin/sections/_form.html.haml
@@ -5,5 +5,5 @@
     = form.input :picasa_user_id, :label => 'Käyttäjätunnus Picasassa'
     = form.input :is_visible, :label => 'Näkyvillä'
   
-  = form.buttons do
-    = form.commit_button :label => 'Tallenna'
+  = form.actions do
+    = form.action :submit, :label => 'Tallenna'
