--- a/app/views/admin/sponsors/_form.html.haml
+++ b/app/views/admin/sponsors/_form.html.haml
@@ -10,5 +10,5 @@
     = form.input :logo
     %p= "Kuva pienennetään 190x190 kokoiseksi."
     
-  = form.buttons do
-    = form.commit_button :label => 'Tallenna'
+  = form.actions do
+    = form.action :submit, :label => 'Tallenna'
