--- a/app/views/admin/team_standings/new.html.haml
+++ b/app/views/admin/team_standings/new.html.haml
@@ -8,5 +8,5 @@
   = form.inputs do
     = form.input :name, :label => 'Nimi'
   
-  = form.buttons do
-    = form.commit_button :label => 'Tallenna'
+  = form.actions do
+    = form.action :submit, :label => 'Tallenna'
