--- a/app/views/admin/sections/edit.html.haml
+++ b/app/views/admin/sections/edit.html.haml
@@ -1,6 +1,6 @@
 %h1
   Editing Section
 
-= render :partial => "form", :locals => {:url => admin_section_path(@admin_section)}
+= render :partial => "form", :locals => {:url => admin_section_path(@section)}
 
 = link_to 'Back', admin_sections_path
